// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio buttons render correctly with show label false 1`] = `
<View
  testID="radio-buttons-test"
>
  <View
    style={false}
  >
    <View
      accessible={true}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          false,
          false,
        ]
      }
      testID="radio-button-firstItem"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderWidth": 1,
              "justifyContent": "center",
            },
            false,
          ]
        }
      >
        <View
          style={Object {}}
        />
      </View>
      <Text
        style={Object {}}
      >
        Formatted firstItem
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          false,
          false,
        ]
      }
      testID="radio-button-secondItem"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderWidth": 1,
              "justifyContent": "center",
            },
            false,
          ]
        }
      />
      <Text
        style={Object {}}
      >
        Formatted secondItem
      </Text>
    </View>
  </View>
</View>
`;

exports[`Radio buttons render correctly without label 1`] = `
<View
  testID="radio-buttons-test"
>
  <Text
    style={Object {}}
  />
  <View
    style={false}
  >
    <View
      accessible={true}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          false,
          false,
        ]
      }
      testID="radio-button-firstItem"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderWidth": 1,
              "justifyContent": "center",
            },
            false,
          ]
        }
      >
        <View
          style={Object {}}
        />
      </View>
      <Text
        style={Object {}}
      >
        Formatted firstItem
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          false,
          false,
        ]
      }
      testID="radio-button-secondItem"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderWidth": 1,
              "justifyContent": "center",
            },
            false,
          ]
        }
      />
      <Text
        style={Object {}}
      >
        Formatted secondItem
      </Text>
    </View>
  </View>
</View>
`;

exports[`Radio buttons render disabled radio buttons correctly 1`] = `
<View
  testID="radio-buttons-test"
>
  <Text
    style={Object {}}
  >
    Label
  </Text>
  <View
    style={false}
  >
    <View
      accessible={true}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          false,
          Object {
            "opacity": 0.5,
          },
        ]
      }
      testID="radio-button-firstItem"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderWidth": 1,
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      />
      <Text
        style={Object {}}
      >
        Formatted firstItem
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          false,
          Object {
            "opacity": 0.5,
          },
        ]
      }
      testID="radio-button-secondItem"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderWidth": 1,
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      />
      <Text
        style={Object {}}
      >
        Formatted secondItem
      </Text>
    </View>
  </View>
</View>
`;

exports[`Radio buttons render horizontal radio buttons correctly 1`] = `
<View
  testID="radio-buttons-test"
>
  <Text
    style={Object {}}
  >
    Label
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "marginBottom": 0,
          },
          false,
        ]
      }
      testID="radio-button-firstItem"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderWidth": 1,
              "justifyContent": "center",
            },
            false,
          ]
        }
      >
        <View
          style={Object {}}
        />
      </View>
      <Text
        style={Object {}}
      >
        Formatted firstItem
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          Object {
            "marginBottom": 0,
          },
          false,
        ]
      }
      testID="radio-button-secondItem"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderWidth": 1,
              "justifyContent": "center",
            },
            false,
          ]
        }
      />
      <Text
        style={Object {}}
      >
        Formatted secondItem
      </Text>
    </View>
  </View>
</View>
`;

exports[`Radio buttons render vertical radio buttons correctly 1`] = `
<View
  testID="radio-buttons-test"
>
  <Text
    style={Object {}}
  >
    Label
  </Text>
  <View
    style={false}
  >
    <View
      accessible={true}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          false,
          false,
        ]
      }
      testID="radio-button-firstItem"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderWidth": 1,
              "justifyContent": "center",
            },
            false,
          ]
        }
      >
        <View
          style={Object {}}
        />
      </View>
      <Text
        style={Object {}}
      >
        Formatted firstItem
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
          false,
          false,
        ]
      }
      testID="radio-button-secondItem"
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderWidth": 1,
              "justifyContent": "center",
            },
            false,
          ]
        }
      />
      <Text
        style={Object {}}
      >
        Formatted secondItem
      </Text>
    </View>
  </View>
</View>
`;

exports[`Radio buttons shows validations correctly 1`] = `
<View
  testID="radio-buttons-test"
>
  <Text
    style={Object {}}
  >
    Label
  </Text>
  <View
    style={false}
  />
  <Text
    style={Object {}}
  >
    error message
  </Text>
</View>
`;

exports[`Radio buttons works correctly without options 1`] = `
<View
  testID="radio-buttons-test"
>
  <Text
    style={Object {}}
  >
    Label
  </Text>
  <View
    style={false}
  />
</View>
`;
